--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -19,9 +19,24 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@swimlane/ngx-datatable": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "bootstrap": "^4.1.1",
+    "error-stack-parser": "^2.0.2",
+    "file-saver": "^2.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
+    "material-design-icons-iconfont": "^4.0.4",
+    "ngx-bootstrap": "^3.0.0",
+    "ngx-loading": "^3.0.1",
+    "ngx-toastr": "^9.1.1",
+    "popper.js": "^1.14.3",
+    "rxjs-compat": "^6.2.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
