pagination lokalize deneme

--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -11,53 +11,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.0",
-    "@angular/common": "^7.2.0",
-    "@angular/compiler": "^7.2.0",
-    "@angular/core": "^7.2.0",
-    "@angular/forms": "^7.2.0",
-    "@angular/http": "^7.2.0",
-    "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/router": "^7.2.0",
+    "@angular/animations": "^7.2.16",
+    "@angular/common": "^7.2.16",
+    "@angular/compiler": "^7.2.16",
+    "@angular/core": "^7.2.16",
+    "@angular/forms": "^7.2.16",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/router": "^7.2.16",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-datatable": "^14.0.0",
-    "bootstrap": "^4.1.1",
-    "core-js": "^2.5.4",
-    "error-stack-parser": "^2.0.2",
-    "file-saver": "^2.0.0",
+    "bootstrap": "^4.5.3",
+    "core-js": "^2.6.12",
+    "error-stack-parser": "^2.0.6",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
-    "lodash": "^4.17.10",
-    "material-design-icons-iconfont": "^4.0.4",
-    "ngx-bootstrap": "^3.0.0",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
+    "material-design-icons-iconfont": "^4.0.5",
+    "ngx-bootstrap": "^3.3.0",
     "ngx-loading": "^3.0.1",
-    "ngx-toastr": "^9.1.1",
+    "ngx-toastr": "^9.2.0",
     "node-sass": "^4.14.1",
-    "popper.js": "^1.14.3",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.2.1",
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.6.3",
+    "rxjs-compat": "^6.6.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular/cli": "~7.2.0",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/jasmine": "~3.3.5",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/lodash": "^4.14.110",
-    "@types/node": "~10.12.18",
+    "@angular/compiler-cli": "^7.2.16",
+    "@angular/language-service": "^7.2.16",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/lodash": "^4.14.166",
+    "@types/node": "^10.12.30",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.12.0",
     "typescript": "~3.2.2"
